<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="cheat_activity_name">Cheat</string>
    <string name="action_settings">Settings</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the REd Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="previous_button_description">previous button</string>
    <string name="next_button_description">next button</string>
    <string name="build_version">API level %s</string>
</resources>
